--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -13,7 +13,7 @@
   {%- include components/dropdown.html -%}
   {% if site.aux_links %}
   <div class="nav-category notranslate">Links</div>
-  <div class="notranslate">
+  <div class="notranslate aux-nav-container">
     {% include components/aux_nav.html %}
   </div>
   {% endif %}
