--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1098,6 +1098,7 @@ pre.highlight {
     }
 }
 
+/*
 @media (min-width: 50rem) {
     .search-active .main-header {
         padding-top: 0;
@@ -1165,7 +1166,7 @@ pre.highlight {
         border-radius: 0;
     }
 }
-
+*/
 
 
 
