--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1060,7 +1060,7 @@ pre.highlight {
 }
 
 
-
+/*
 @media (min-width: 31.25rem) {
     .search-results-list {
         font-size: 1rem !important;
@@ -1097,7 +1097,7 @@ pre.highlight {
         font-size: 0.875rem !important;
     }
 }
-
+*/
 /*
 @media (min-width: 50rem) {
     .search-active .main-header {
