--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -10,6 +10,9 @@
   {% include components/search_header.html %}
   {% endif %}
 
+1. TOC
+{:toc}
+
   
   {% include_cached components/site_nav.html %}
   
