--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,12 +1,12 @@
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
     <meta name="generator" content="Jekyll">
     <meta name="robots" content="index, follow">
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{%- include components/title.html -%}">
-    <meta name="license" content="GPLV2">
+    <meta name="license" content="GPLv2">
     <meta name="repository" content="https://github.com/lucianofedericopereira">
     <meta name="robots" content="index, follow">
     <meta name="twitter:card" content="summary">
@@ -18,17 +18,20 @@
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
-    <link rel="dns-prefetch" href="https://lucianofedericopereira.github.io" crossorigin>
-    <link rel="preconnect" href="https://lucianofedericopereira.github.io">
+    <link href="https://lucianofedericopereira.github.io" rel="dns-prefetch" crossorigin>
+    <link href="https://lucianofedericopereira.github.io" rel="preconnect">
+    <link href="https://translate.google.com" rel="preconnect">
+    <link href="{{ 'assets/images/favicon.ico' | relative_url }}" rel="icon" type="image/x-icon">
     <link rel="preload" href="{{ '/assets/fonts/JetBrainsMono-Medium.woff2' | relative_url }}" type="font/woff2" as="font">
     <link rel="preload" href="{{ '/assets/fonts/Mediaan-Regular.woff2' | relative_url }}" type="font/woff2" as="font">
     <link rel="preload" href="{{ '/assets/fonts/VisueltPro-Regular.woff2' | relative_url }}" type="font/woff2" as="font">
     <link rel="preload" as="style" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}" onload="this.rel='stylesheet'">
+    <link rel="preload" as="script" href="{{ '/assets/js/script.js' | relative_url }}">
     <link rel="preload" as="script" href="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}">
     <link rel="preload" as="script" href="{{ '/assets/js/just-the-docs.js' | relative_url }}">
     <link rel="icon" href="{{ site.favicon_ico | relative_url }}" type="image/x-icon">
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
-    {%- include components/style.html -%}
+    <script src="{{ '/assets/js/script.js' | relative_url }}" async></script>
     <script src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
     <script type="application/ld+json">
