--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -1,31 +1,26 @@
-<div class="side-bar side-bar-fixed">
-  <div class="site-header" role="banner">
-    <a href="{{ '/' | relative_url }}" class="lh-tight fs-3 text-grey-dk-200 custom-logo site-title notranslate">
-      <img width="36px" height="36px" src="{{ site.favicon_ico | relative_url }}" alt="logo">{{site.title}}
-    </a>    
-    <button id="menu-button" class="site-button btn-reset d-none" aria-label="Toggle menu" aria-pressed="false"></button>
-  </div>
-  <p class="custom-slogan">{{site.description}}</p>
   {% if site.search_enabled != false %}
   {% include components/search_header.html %}
   {% endif %}
 
 
-  {% if page.has_toc != false %}
-     <nav id="nav-sidebar">
-       {% include components/toc.html id='sidebar' class='nav.nav-stacked' item_class='toc_li' html=content %}
-     </nav>
+  <div class="aside-title">Sections</div>
+  {% include_cached components/site_nav.html %}
+  {% if site.aux_links %}
+  {% include components/aux_nav.html %}
   {% endif %}
 
-  
-  {% include_cached components/site_nav.html %}
-  
-  
-  {%- include components/dropdown.html -%}
-  {% if site.aux_links %}
-  <div class="nav-category notranslate">Links</div>
-  <div class="notranslate aux-nav-container">
-    {% include components/aux_nav.html %}
+
+
+  <div class="dropdown">
+    <button class="dropbtn aside-title hidden">Translate &rsaquo;</button>
+    <div class="dropdown-lang" style="display:none">
+      <a href="#" hreflang="en" class="notranslate lang-select aside-link aside-selected">English</a>
+      <a href="#" hreflang="es" class="notranslate lang-select aside-link">Español</a>
+      <a href="#" hreflang="it" class="notranslate lang-select aside-link">Italiano</a>
+      <a href="#" hreflang="de" class="notranslate lang-select aside-link">Deutsch</a>
+      <a href="#" hreflang="pt" class="notranslate lang-select aside-link">Português</a>
+      <a href="#" hreflang="fr" class="notranslate lang-select aside-link">Français</a>
+    </div>
   </div>
-  {% endif %}
-</div>
+
+  
