--- a/_includes/components/site_nav.html
+++ b/_includes/components/site_nav.html
@@ -1,13 +1,8 @@
-<div class="nav-category">Sections</div>
-<nav aria-label="Main" id="site-nav" class="site-nav">
   {% assign home_page = site.html_pages
         | where: "title", "Home"
         | first %}
-<ul class="nav-list">  
   {% if home_page %} 
-      <li class="nav-list-item">
-        <a class="nav-list-link" href="/articles">{{ home_page.title }}</a>
-      </li>  
+        <a class="aside-link" href="/articles">{{ home_page.title }}</a>
   {% endif %}
    {% assign pages_top = site.html_pages
         | where_exp:"item", "item.title != nil"
@@ -22,11 +17,7 @@
         | where_exp:"item", "item.parent == nil"
         | where_exp:"item", "item.nav_exclude != true" %}
       {% unless item.title == "Home" %}
-      <li class="nav-list-item">
-          <a class="nav-list-link" href="/articles{{ item.url }}">{{ item.title }}</a>
-      </li>  
+          <a class="aside-link" href="/articles{{ item.url }}">{{ item.title }}</a>
       {% endunless %}
     {% endfor %}
   {% endif %}
-</ul>
-</nav>
