--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -32,6 +32,8 @@ nav_enabled: false
         <div class="icon icon-toc" aria-label="Show Table of Contents"></div>
     </label>
 
+    <h1>{{ page.title | capitalize }}</h1>
+
     <input type="checkbox" aria-expanded="false" id="toc">
     <div id="index">
         <div id="reading-time"></div>
