--- a/_includes/components/site_nav.html
+++ b/_includes/components/site_nav.html
@@ -1,3 +1,5 @@
+<div class="aside-title">Sections</div>
+
   {% assign home_page = site.html_pages
         | where: "title", "Home"
         | first %}
