--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -21,6 +21,7 @@
     <link href="https://lucianofedericopereira.github.io" rel="dns-prefetch" crossorigin>
     <link href="https://lucianofedericopereira.github.io" rel="preconnect">
     <link href="https://translate.google.com" rel="preconnect">
+    <link href="https://translate.googleapis.com" rel="preconnect">
     <link href="{{ 'assets/images/favicon.ico' | relative_url }}" rel="icon" type="image/x-icon">
     <link rel="preload" href="{{ '/assets/fonts/JetBrainsMono-Medium.woff2' | relative_url }}" type="font/woff2" as="font">
     <link rel="preload" href="{{ '/assets/fonts/Mediaan-Regular.woff2' | relative_url }}" type="font/woff2" as="font">
