--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -878,9 +878,10 @@ main footer a::before {
             min-width: 560px;
         }
         main>.highlighter-rouge {
-            width: 72%;
-            max-width: 1000px;
+            min-height: 3.25rem;
             min-width: 520px;
+            width: 72%;
+            max-width: 1100px;
         }
 
         hr {
