--- a/_includes/components/comments.html
+++ b/_includes/components/comments.html
@@ -1,6 +1,8 @@
-<h3>Comments</h3>
-<div class="notranslate">
-    <script src="https://utteranc.es/client.js"   theme="github-light" issue-term="title"
-           repo="lucianofedericopereira/comments" crossorigin="anonymous" async>
-    </script>
+<div id="comments">
+    <h3>Comments</h3>
+    <div id="comments-utteranc" class="notranslate">
+        <script src="https://utteranc.es/client.js"   theme="github-light" issue-term="title"
+                repo="lucianofedericopereira/comments" crossorigin="anonymous" async>
+        </script>
+    </div>
 </div>
