js zoom parameters

--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.67, maximum-scale=1.7, user-scalable=yes">
     <meta name="generator" content="Jekyll">
     <meta name="robots" content="index, follow">
     <meta name="author" content="{{ site.author }}">
