js zoom parameters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,10 @@ main ul {
         color: var(--c1);
     }
 
+    main p.highlighter-rouge {
+        font-size: 1rem;
+    }
+
     main p:hover {
         color: var(--c0);
     }
