--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,9 @@ main ul {
         --c9: #FFDEA3;
 
 
-        --rf: #F1F6E6;
+        --xf: #F1F6E6;
+
+        --rf: #F8F9F1;
 
 
         --h0: #000000;
