--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,9 +148,7 @@ main ul {
 
 
         --xf: #F1F6E6;
-
-        --rf: #F8F9F1;
-
+        --rf: #F4F7EB;
 
         --h0: #000000;
         --h1: #ff7747;
